--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Mercado Pago Configuration
+# Pegue suas chaves em: https://www.mercadopago.com.br/developers/panel/app
+# PUBLIC_KEY: Usada no frontend para criar preferências de pagamento
+# ACCESS_TOKEN: Usada no backend para processar pagamentos (NÃO EXPONHA NO FRONTEND!)
+VITE_MERCADO_PAGO_PUBLIC_KEY=your_public_key_here
+VITE_MERCADO_PAGO_ACCESS_TOKEN=your_access_token_here
