--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build required for Node.js backend'"
   },
   "dependencies": {
     "express": "^4.18.2",
