fix: configure CORS for production and update backend URL

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-# Backend URL (será definido após deploy do backend)
-VITE_BACKEND_URL=https://seu-backend.onrender.com
+# Backend URL
+VITE_BACKEND_URL=https://orcapay.onrender.com
 
 # Firebase (suas chaves já configuradas)
 VITE_FIREBASE_API_KEY=AIzaSyBzp9MZ-KRdt234164sRmnaYTeWEO7Eefk
