feat: migrate to Mercado Pago production keys

--- a/.env.production
+++ b/.env.production
@@ -10,5 +10,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=947822787225
 VITE_FIREBASE_APP_ID=1:947822787225:web:14809d75855cfe9ee49608
 VITE_FIREBASE_MEASUREMENT_ID=G-TF5LGRMXLN
 
-# Mercado Pago - Frontend
-VITE_MERCADO_PAGO_PUBLIC_KEY=TEST-49880c8d-83dc-404f-a8f5-2409dc468f85
+# Mercado Pago - Frontend (PRODUÇÃO)
+VITE_MERCADO_PAGO_PUBLIC_KEY=APP_USR-e3c78261-f861-4218-b849-b11981e1c420
